crates/linear_type/tests/compile_fail/must_use.rs
#![deny(warnings)]

use linear_type::LinearString;

fn main() {
    LinearString::new("Test".to_string());
}
